# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  responces.AssetData:
+  domain.AssetData:
     properties:
       abuseConfidenceScore:
         description: Оценка злоупотребления (от 0 до 100)
@@ -66,7 +66,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/responces.AssetData'
+              $ref: '#/definitions/domain.AssetData'
             type: array
         "500":
           description: Internal Server Error
@@ -87,7 +87,7 @@ paths:
         name: asset
         required: true
         schema:
-          $ref: '#/definitions/responces.AssetData'
+          $ref: '#/definitions/domain.AssetData'
       produces:
       - application/json
       responses:
@@ -116,7 +116,7 @@ paths:
         name: asset
         required: true
         schema:
-          $ref: '#/definitions/responces.AssetData'
+          $ref: '#/definitions/domain.AssetData'
       produces:
       - application/json
       responses:
@@ -174,7 +174,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responces.AssetData'
+            $ref: '#/definitions/domain.AssetData'
         "404":
           description: Not Found
           schema:
